# glint

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
assets/icon/: glint.icns  install-macos-app.sh
docs/: glint-spec.md  multi-account-spec.md  profiles-spec.md  stack-spec.md  widget-sdk.md
src/: app.rs  clipboard.rs  credentials.rs  event.rs  format.rs  geolocation.rs  http.rs  main.rs  polling.rs  runtime_state.rs  text.rs  zoom.rs
src/auth/: loopback.rs  mod.rs  registry.rs
src/auth/google/: flow.rs  mod.rs  store.rs
src/auth/microsoft/: flow.rs  mod.rs  store.rs
src/cache/: mod.rs
src/config/: layout.rs  migrate.rs  mod.rs  profiles.rs  types.rs  watcher.rs
src/config/defaults/: calendar.toml  clock.toml  colorschemes.toml  config.toml  llm.toml  news.toml  stocks.toml  weather.toml
src/config/defaults/credentials/: anthropic.toml  caldav.toml  google_client.toml  microsoft_client.toml  openai.toml
src/llm/: anthropic.rs  cache.rs  mod.rs  openai.rs  rate_limiter.rs
src/market_data/: cache.rs  mod.rs  period.rs  yahoo.rs
src/providers/: mod.rs
src/theme/: mod.rs
src/ui/: big_digits.rs  grid.rs  help.rs  mod.rs  modal.rs  status.rs  status_bar.rs
src/ui/chart/: annotations.rs  axes.rs  braille.rs  mod.rs  range_bar.rs
src/widgets/: mod.rs  registry.rs  stack.rs  view_tier.rs
src/widgets/calendar/: caldav.rs  colors.rs  config.rs  google.rs  local.rs  mod.rs  nav.rs  outlook.rs  provider.rs  state.rs  tests.rs  wiring.rs
src/widgets/clock/: clock_view.rs  config.rs  mod.rs  persistence.rs  state.rs  stopwatch.rs  tests.rs  timer.rs
src/widgets/email/: gmail.rs  html_strip.rs  imap.rs  mod.rs  outlook.rs  provider.rs  seen_store.rs  tests.rs
src/widgets/feeds/: image.rs  mod.rs  provider.rs  templates.rs  tests.rs
src/widgets/feeds/templates/: marketwatch.toml  wsj.toml
src/widgets/forex/: graph.rs  mod.rs  provider.rs  tests.rs
src/widgets/gallery/: mod.rs  tests.rs
src/widgets/news/: catalogue.rs  catalogue.toml  mod.rs  provider.rs  tests.rs
src/widgets/notes/: mod.rs  store.rs  tests.rs
src/widgets/resources/: mod.rs  tests.rs
src/widgets/stack/: mod.rs  tests.rs
src/widgets/sticky/: mod.rs  store.rs
src/widgets/stocks/: graph.rs  mod.rs  provider.rs  tests.rs
src/widgets/weather/: icons.rs  mod.rs  provider.rs  tests.rs
src/widgets/wsj/: image.rs  mod.rs  provider.rs
src/wizard/: app.rs  descriptor.rs  finalize.rs  flow.rs  hydrate.rs  mod.rs  state.rs  storage.rs  style.rs  toml_merge.rs
src/wizard/pages/: assign.rs  assign_stack.rs  confirm.rs  global.rs  layout.rs  layouts.toml  manager.rs  migrate_prompt.rs  mod.rs  oauth_setup.rs  preview.rs  welcome.rs  widget.rs
