[package]
name = "glint-tui"
version = "0.1.0"
edition = "2021"
description = "A fast, extensible terminal dashboard for stocks, calendar, news, and beyond"
license = "MIT"
repository = "https://github.com/ntrospect0/glint"
keywords = ["tui", "dashboard", "terminal", "stocks", "ratatui"]
categories = ["command-line-interface"]

# The package crate is `glint-tui` (kept for crates.io publishing), but the
# produced binary is just `glint` — that's what ships to $PATH and what the
# user types to launch the dashboard.
[[bin]]
name = "glint"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP & serialization
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Utilities
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
open = "5"
urlencoding = "2"
feed-rs = "2"
lru = "0.12"
roxmltree = "0.20"
ical = "0.11"
sha2 = "0.10"
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strsim = "0.11"
notify = "6"
dirs = "5"
clap = { version = "4", features = ["derive"] }

# System metrics (powers the Resources widget). Cross-platform read-only
# CPU / memory / process snapshots; no FFI of our own.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Inline image rendering (powers the Gallery widget). Detects the host
# terminal's image protocol — iTerm2, Kitty, Sixel — and falls back to
# unicode halfblocks when none is available. Pulls in the `image` crate
# for PNG/JPEG/GIF decoding.
ratatui-image = { version = "2", default-features = false, features = ["image-defaults", "crossterm", "rustix"] }
image = "0.25"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
