[package]
name = "glint-tui"
version = "0.2.0"
edition = "2021"
description = "A fast, extensible terminal dashboard for stocks, calendar, news, and beyond"
license = "MIT"
repository = "https://github.com/ntrospect0/glint"
keywords = ["tui", "dashboard", "terminal", "stocks", "ratatui"]
categories = ["command-line-interface"]

# The package crate is `glint-tui` (kept for crates.io publishing), but the
# produced binary is just `glint` — that's what ships to $PATH and what the
# user types to launch the dashboard.
[[bin]]
name = "glint"
path = "src/main.rs"

# ── Widget features ──────────────────────────────────────────────────────────
# Each widget compiles in only when its feature is enabled. `default` aliases
# the `widgets-all` umbrella so a plain `cargo install glint-tui` ships with
# every widget — the slim-build path is available for downstream packagers
# (and binary-size-sensitive deployments) via `--no-default-features` plus a
# hand-picked subset.
#
# Adding a new widget is purely additive: declare its feature here, include
# it in the `widgets-all` umbrella, add the WidgetDescriptor in
# src/widgets/registry.rs, and the build tree picks it up.
[features]
default = ["widgets-all"]
widget-clock = []
widget-weather = []
widget-calendar = []
widget-news = []
widget-stocks = []
# Forex reuses Stocks' Yahoo `Period` mapping verbatim, so enabling
# widget-forex implicitly pulls in widget-stocks. (The graph renderer is
# duplicated under forex/graph.rs — the Period enum is the load-bearing
# dependency.)
widget-forex = ["widget-stocks"]
widget-email = []
widget-resources = []
widget-gallery = []
widgets-all = [
  "widget-clock",
  "widget-weather",
  "widget-calendar",
  "widget-news",
  "widget-stocks",
  "widget-forex",
  "widget-email",
  "widget-resources",
  "widget-gallery",
]

[dependencies]
# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP & serialization
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Utilities
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
open = "5"
urlencoding = "2"
feed-rs = "2"
lru = "0.12"
roxmltree = "0.20"
ical = "0.11"
sha2 = "0.10"
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strsim = "0.11"
notify = "6"
# Terminal cell width for unicode strings — needed for any column-width
# math against text that can contain CJK / emoji / wide glyphs (where
# `chars().count()` no longer matches what the terminal renders).
unicode-width = "0.1"
# Mozilla's Readability port for Rust — used by the news widget to extract
# the readable article body from an HTML page before handing it to the
# LLM for summarization. Lazy / on-demand; only fires when the user
# explicitly opts into the LLM summary via `s`.
readability = "0.3"
# `readability::extract` takes a `&Url` for resolving relative links.
url = "2"
dirs = "5"
clap = { version = "4", features = ["derive"] }

# System metrics (powers the Resources widget). Cross-platform read-only
# CPU / memory / process snapshots; no FFI of our own.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Inline image rendering (powers the Gallery widget). Detects the host
# terminal's image protocol — iTerm2, Kitty, Sixel — and falls back to
# unicode halfblocks when none is available. Pulls in the `image` crate
# for PNG/JPEG/GIF decoding.
ratatui-image = { version = "2", default-features = false, features = ["image-defaults", "crossterm", "rustix"] }
image = "0.25"

# IMAP support for the Email widget's IMAP provider (third option
# alongside Gmail OAuth and Outlook OAuth). The sync `imap` crate is
# the mature option; we run its calls under `tokio::task::spawn_blocking`
# so the wider async runtime isn't held up. `mail-parser` parses RFC
# 5322 message bodies (To/From/Subject/text) once IMAP delivers them.
imap = "2"
native-tls = "0.2"
mail-parser = "0.9"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
