[package]
name = "glint-tui"
version = "0.3.5"
edition = "2021"
description = "A fast, extensible terminal dashboard for stocks, calendar, news, and beyond"
license = "GPL-3.0-or-later"
repository = "https://github.com/ntrospect0/glint"
keywords = ["tui", "dashboard", "terminal", "stocks", "ratatui"]
categories = ["command-line-interface"]

# The package crate is `glint-tui` (kept for crates.io publishing), but the
# produced binary is just `glint` — that's what ships to $PATH and what the
# user types to launch the dashboard.
[[bin]]
name = "glint"
path = "src/main.rs"

# ── Widget features ──────────────────────────────────────────────────────────
# Each widget compiles in only when its feature is enabled. `default` aliases
# the `widgets-all` umbrella so a plain `cargo install glint-tui` ships with
# every widget — the slim-build path is available for downstream packagers
# (and binary-size-sensitive deployments) via `--no-default-features` plus a
# hand-picked subset.
#
# Adding a new widget is purely additive: declare its feature here, include
# it in the `widgets-all` umbrella, add the WidgetDescriptor in
# src/widgets/registry.rs, and the build tree picks it up.
[features]
default = ["widgets-all"]

# Each widget gates its widget-exclusive dependencies through the matching
# `dep:` entry below, so `--no-default-features --features "widget-clock"`
# really does compile out everything email / gallery / news / etc. pull in.
# Shared infra (chrono, reqwest, tokio, ratatui, anyhow, serde, sha2, …)
# stays unconditional — gating it would either need every widget to opt in
# or break the wizard / runtime, neither of which is worth the LOC.
widget-clock = []
widget-weather = []
widget-calendar = ["dep:roxmltree", "dep:ical"]
widget-news = ["dep:feed-rs", "dep:readability", "dep:url"]
widget-stocks = []
# Forex reuses Stocks' Yahoo `Period` mapping verbatim, so enabling
# widget-forex implicitly pulls in widget-stocks.
widget-forex = ["widget-stocks"]
widget-email = ["dep:imap", "dep:native-tls", "dep:mail-parser"]
widget-resources = ["dep:sysinfo"]
widget-gallery = ["dep:image", "dep:ratatui-image"]
widget-notes = []
# Feeds depends on news's sanitize_summary helper and renders article
# images via ratatui-image, so it pulls both widget-news and the image
# stack directly. Hosts the tabbed single-source RSS reader (WSJ,
# Barron's, MarketWatch, …).
widget-feeds = ["widget-news", "dep:image", "dep:ratatui-image"]
widgets-all = [
  "widget-clock",
  "widget-weather",
  "widget-calendar",
  "widget-news",
  "widget-stocks",
  "widget-forex",
  "widget-email",
  "widget-resources",
  "widget-gallery",
  "widget-notes",
  "widget-feeds",
]

[dependencies]
# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async. We pull only what we use: `rt-multi-thread` for the runtime +
# `spawn_blocking` / `block_in_place` (sync IMAP, readability extract);
# `macros` for `#[tokio::main]` / `#[tokio::test]` / `join!` / `select!`;
# `net` + `io-util` for the OAuth loopback TCP listener; `time` for
# polling intervals + per-request timeouts; `sync` for the mpsc channels.
# Dropping the `"full"` feature shaves the unused fs/process/signal
# subsystems and ~5 transitive crates.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }

# HTTP & serialization
# `gzip`/`brotli`/`deflate` + `http2` so the shared HTTP client can
# accept the same Accept-Encoding set a real browser advertises and
# negotiates HTTP/2 — Cloudflare-fronted news feeds (CTV, Barron's,
# CBC) reject HTTP/1.1 + identity-encoding requests as automation
# even when the User-Agent is browser-shaped.
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Utilities
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
open = "5"
urlencoding = "2"
feed-rs = { version = "2", optional = true }   # widget-news (+ widget-feeds via news)
lru = "0.12"
roxmltree = { version = "0.20", optional = true } # widget-calendar (CalDAV provider)
ical = { version = "0.11", optional = true }     # widget-calendar (CalDAV provider)
sha2 = "0.10"
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6"
# Terminal cell width for unicode strings — needed for any column-width
# math against text that can contain CJK / emoji / wide glyphs (where
# `chars().count()` no longer matches what the terminal renders).
unicode-width = "0.1"
# Mozilla's Readability port for Rust — used by the news widget to extract
# the readable article body from an HTML page before handing it to the
# LLM for summarization. Lazy / on-demand; only fires when the user
# explicitly opts into the LLM summary via `s`.
readability = { version = "0.3", optional = true }
# `readability::extract` takes a `&Url` for resolving relative links.
url = { version = "2", optional = true }
dirs = "5"
clap = { version = "4", features = ["derive"] }

# Direct OS clipboard access. We try this before falling back to OSC 52
# in `crate::clipboard::copy` — OSC 52 depends on terminal-specific
# config (off by default in iTerm2/Alacritty, unsupported in Terminal.app)
# and a "yank" that never actually reaches the system clipboard makes
# Cmd+V silently paste stale content.
arboard = "3"

# System metrics (powers the Resources widget). Cross-platform read-only
# CPU / memory / process snapshots; no FFI of our own.
sysinfo = { version = "0.32", default-features = false, features = ["system"], optional = true }

# Inline image rendering (powers the Gallery widget). Detects the host
# terminal's image protocol — iTerm2, Kitty, Sixel — and falls back to
# unicode halfblocks when none is available. Pulls in the `image` crate
# for PNG/JPEG/GIF decoding.
# NB: deliberately *not* requesting `image-defaults` here — that feature
# turns on `image/default` (every codec including AVIF/EXR/HDR/QOI), and
# Cargo's feature unification then forces them across the whole tree even
# though our direct `image = { default-features = false, ... }` line opts
# out. Only the codecs in our direct features list end up in the build.
ratatui-image = { version = "2", default-features = false, features = ["crossterm", "rustix"], optional = true }
# Gallery only enumerates JPEG/PNG/GIF/WebP/BMP/TIFF/ICO (see
# `IMAGE_EXTENSIONS` in widgets/gallery/mod.rs). Disabling the default
# features sheds AVIF/EXR/HDR/PNM/QOI/Farbfeld plus `ravif`, `rayon`,
# `moxcms`, `exr` and assorted color-space crates.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico"], optional = true }

# IMAP support for the Email widget's IMAP provider (third option
# alongside Gmail OAuth and Outlook OAuth). The sync `imap` crate is
# the mature option; we run its calls under `tokio::task::spawn_blocking`
# so the wider async runtime isn't held up. `mail-parser` parses RFC
# 5322 message bodies (To/From/Subject/text) once IMAP delivers them.
imap = { version = "2", optional = true }
native-tls = { version = "0.2", optional = true }
mail-parser = { version = "0.9", optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
